--- a/ReviewScrapper/appsettings.json
+++ b/ReviewScrapper/appsettings.json
@@ -1,7 +1,11 @@
 {
 	"API": {
 		"Address": "https://localhost:44321/Reviews",
-		"Pages": 5
+		"Pages": 200
 	},
-	"ExpressionsFile": "expressions.json"
+	"RegexPattern": "([\\s!]*|^[\\.])(?:$|)\\b",
+	"ExpressionsFile": "expressions.json",
+	"ScoresFile": "scores.json",
+	"ExcitmentThreshold": 7,
+	"ResultCount": 3
 }
