--- a/ReviewScrapper/appsettings.json
+++ b/ReviewScrapper/appsettings.json
@@ -1,8 +1,6 @@
 {
-	"API": {
-		"Address": "https://localhost:44321/Reviews",
-		"Pages": 5
-	},
+	"Pages": 5,
+	"WebsiteURL": "https://www.dealerrater.com/dealer/McKaig-Chevrolet-Buick-A-Dealer-For-The-People-dealer-reviews-23685/page{0}/?filter=#link",
 	"RegexPattern": "[!]*",
 	"ExpressionsFile": "expressions.json",
 	"ScoresFile": "scores.json",
